--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,19 +2,20 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <link href="style.css" rel="stylesheet" />
     <meta charset="utf-8">
     <title>Flatiron Circles</title>
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.1.min.js"></script>
     </head>
     <body>
-      <h1>Flatiron Circles</h1>
+      <h1 class="title">Flatiron Circles</h1>
       <script type="text/javascript"></script>
     <style>
         html, body, #map-canvas {
           height: 90%;
-          margin: 5px 8px 18px 8px;
-          padding: 5px;
+          margin: 0px 5px 13px 5px;
+          padding: 2px;
         }
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
