--- a/app/views/flatiron_alums.erb
+++ b/app/views/flatiron_alums.erb
@@ -1,12 +1,7 @@
 <h1>All Flatiron Alums</h1>
 
-<!-- <ul>
-  <% @alums.each do |alum| %>
-    <li><%= house.address %></li>
-    <ul>
-      <% house.unclaimed_candies.each do |candy| %>
-        <li><%= candy.name %></li>
-      <% end %>
-    </ul>
+<ul>
+  <% @linkedin_scraper.each do |scraper| %>
+    <li><%= scraper.titles %></li>
   <% end %>
-</ul> -->
+</ul>
