--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no"> -->
     <link href="style.css" rel="stylesheet" />
     <meta charset="utf-8">
     <title>Flatiron Circles</title>
@@ -10,12 +12,13 @@
     </head>
     <body>
       <h1 class="title">Flatiron Circles</h1>
+      <h1><a href="/flatiron_alums">Where are Flatiron alums now?</a></h1>
       <script type="text/javascript"></script>
     <style>
         html, body, #map-canvas {
           height: 90%;
-          margin: 0px 5px 13px 5px;
-          padding: 2px;
+          margin: 0px 25px 13px 5px;
+          padding: 10px;
         }
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
