--- a/css/layouts/marketing-old-ie.css
+++ b/css/layouts/marketing-old-ie.css
@@ -8,6 +8,7 @@
  * -- BASE STYLES --
  * Most of these are inherited from Base, but I want to change a few.
  */
+
 body {
     line-height: 1.7em;
     color: #7f8c8d;
@@ -33,6 +34,7 @@ label {
  * -- LAYOUT STYLES --
  * These are some useful classes which I will need
  */
+
 .l-box {
     padding: 1em;
 }
@@ -46,12 +48,11 @@ label {
     text-align: center;
 }
 
-
-
 /*
  * -- PURE FORM STYLES --
  * Style the form inputs and labels
  */
+
 .pure-form label {
     margin: 1em 0 0;
     font-weight: bold;
@@ -70,6 +71,7 @@ label {
  * -- PURE BUTTON STYLES --
  * I want my pure-button elements to look a little different
  */
+
 .pure-button {
     background-color: #1f8dd6;
     color: white;
@@ -84,7 +86,6 @@ a.pure-button-primary {
     font-size: 120%;
 }
 
-
 /*
  * -- MENU STYLES --
  * I want to customize how my .pure-menu looks at the top of the page
@@ -95,9 +96,11 @@ a.pure-button-primary {
     text-align: center;
     box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
 }
+
 .home-menu.pure-menu-open {
     background: #2d3e50;
 }
+
 .pure-menu.pure-menu-open.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
     border-bottom: none;
@@ -118,13 +121,13 @@ a.pure-button-primary {
 .home-menu a {
     color: #6FBEF3;
 }
+
 .home-menu li a:hover,
 .home-menu li a:focus {
     background: none;
     border: none;
     color: #AECFE5;
 }
-
 
 /*
  * -- SPLASH STYLES --
@@ -149,12 +152,16 @@ a.pure-button-primary {
     height: 50%;
     margin: auto;
     position: absolute;
-    top: 100px; left: 0; bottom: 0; right: 0;
+    top: 100px;
+    left: 0;
+    bottom: 0;
+    right: 0;
     text-align: center;
     text-transform: uppercase;
 }
 
 /* This is the main heading that appears on the blue section */
+
 .splash-head {
     font-size: 20px;
     font-weight: bold;
@@ -167,6 +174,7 @@ a.pure-button-primary {
 }
 
 /* This is the subheading that appears on the blue section */
+
 .splash-subhead {
     color: white;
     letter-spacing: 0.05em;
@@ -177,6 +185,7 @@ a.pure-button-primary {
  * -- CONTENT STYLES --
  * This represents the content area (everything below the blue section)
  */
+
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
@@ -185,10 +194,10 @@ a.pure-button-primary {
     min-height: 12%;
     z-index: 2;
     background: white;
-
 }
 
 /* This is the class used for the main content headers (<h2>) */
+
 .content-head {
     font-weight: 400;
     text-transform: uppercase;
@@ -197,25 +206,30 @@ a.pure-button-primary {
 }
 
 /* This is a modifier class used when the content-head is inside a ribbon */
+
 .content-head-ribbon {
     color: white;
 }
 
 /* This is the class used for the content sub-headers (<h3>) */
+
 .content-subhead {
     color: #1f8dd6;
 }
-    .content-subhead i {
-        margin-right: 7px;
-    }
+
+.content-subhead i {
+    margin-right: 7px;
+}
 
 /* This is the class used for the dark-background areas. */
+
 .ribbon {
     background: #2d3e50;
     color: #aaa;
 }
 
 /* This is the class used for the footer */
+
 .footer {
     background: #111;
 }
@@ -225,48 +239,52 @@ a.pure-button-primary {
  * On tablets and other medium-sized devices, we want to customize some
  * of the mobile styles.
  */
-@media (min-width: 48em) {
 
-    /* We increase the body font size */
-    body {
-        font-size: 16px;
-    }
-    /* We want to give the content area some more padding */
-    .content {
-        padding: 1em;
-    }
+/* We increase the body font size */
 
-    /* We can align the menu header to the left, but float the
+body {
+    font-size: 16px;
+}
+
+/* We want to give the content area some more padding */
+
+.content {
+    padding: 1em;
+}
+
+/* We can align the menu header to the left, but float the
     menu items to the right. */
-    .home-menu {
-        text-align: left;
-    }
-        .home-menu ul {
-            float: right;
-        }
 
-    /* We increase the height of the splash-container */
+.home-menu {
+    text-align: left;
+}
+
+.home-menu ul {
+    float: right;
+}
+
+/* We increase the height of the splash-container */
+
 /*    .splash-container {
         height: 500px;
     }*/
 
-    /* We decrease the width of the .splash, since we have more width
+/* We decrease the width of the .splash, since we have more width
     to work with */
-    .splash {
-        width: 50%;
-        height: 50%;
-    }
 
-    .splash-head {
-        font-size: 250%;
-    }
+.splash {
+    width: 50%;
+    height: 50%;
+}
 
+.splash-head {
+    font-size: 250%;
+}
 
-    /* We remove the border-separator assigned to .l-box-lrg */
-    .l-box-lrg {
-        border: none;
-    }
+/* We remove the border-separator assigned to .l-box-lrg */
 
+.l-box-lrg {
+    border: none;
 }
 
 /*
@@ -274,9 +292,3 @@ a.pure-button-primary {
  * On desktops and other large devices, we want to over-ride some
  * of the mobile and tablet styles.
  */
-@media (min-width: 78em) {
-    /* We increase the header font size even more */
-    .splash-head {
-        font-size: 300%;
-    }
-}
