--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -188,6 +188,7 @@ a.pure-button-primary {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
+    left: -1px;
     top: 87%;
     width: 100%;
     min-height: 12%;
