Changed app name to NextStep

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A layout example that shows off a responsive product landing page.">
 
-    <title>Flatiron Circles</title>
+    <title>NextStep</title>
 
     
 
@@ -61,9 +61,9 @@
 
 <div class="splash-container">
     <div class="splash">
-        <h1 class="splash-head">Flatiron Circles</h1>
+        <h1 class="splash-head">NextStep</h1>
         <p class="splash-subhead">
-            Following the Flatiron journey, one graduate at a time
+            Following the Flatiron journey, one step at a time
         </p>
         <p>
             <a href="http://www.flatironschool.com" class="pure-button pure-button-primary">Made with   &#9829;   at The Flatiron School</a>
@@ -387,7 +387,7 @@
 
 
     <div class="footer l-box is-center">
-        <h5>Flatiron Circles was created with   &#9829;   by Sam Van Tran & Vaidehi Joshi, Ruby-006.</h5>
+        <h5>NextStep was created with   &#9829;   by Sam Van Tran & Vaidehi Joshi, Ruby-006.</h5>
     </div>
 
 </div>
