--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,22 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>NextStep - Where the Magic Happens!</title>
+  <style>
+    body {
+      background-color: #1f8dd6;
+    }
+    h1, form {
+      text-align: center;
+    }
+    button {
+      width: 100px;
+      height: 80px;
+      border-radius: 10px;
+    }
+    
+  </style>
+</head>
+
 <h1>Ready for the magic?</h1>
 <form id="magic-maker" action="/make-magic" method="post">
 <button type="submit">YES!</button>
 </form>
 
-var data = google.visualization.arrayToDataTable([
-  ['Title', 'Rate'],
-  ['Software Engineer',    17],
-  ['Web Developer',    7],
-  ['Software Developer',    6],
-  ['Developer',    5],
-  ['iOS Developer',    4],
-  ['Full-Stack Developer',    5],
-  ['Software Engineer Apprentice',    2],
-  ['Product Manager',    2],
-  ['Ruby Developer',    2],
-  ['Web Engineer',    2],
-  ['Web Development Fellow',    2],
-  ['Node Engineer',    1],
-  ['Front End Developer',    1],
-  ['Ruby on Rails Developer',    1]
-]);
+</html>
