--- a/app/views/display_magic.html.erb
+++ b/app/views/display_magic.html.erb
@@ -373,7 +373,7 @@
     <div class="splash">
       <h1 class="splash-head">NextStep</h1>
       <p class="splash-subhead">
-          Following the <%= @run_session.company_name %> journey, one step at a time
+          Following the <%= @s.company_name %> journey, one step at a time
       </p>
       <p>
           <a href="http://www.flatironschool.com" class="pure-button pure-button-primary">Made with   &#9829;   at The Flatiron School</a>
@@ -384,7 +384,7 @@
   <div class="content-wrapper">
       <div class="pure-g">
         <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-      <h1 class="content-head is-center">Where do <%= @run_session.company_name %> graduates end up?</h1>
+      <h1 class="content-head is-center">Where do <%= @s.company_name %> graduates end up?</h1>
         <script type="text/javascript"></script>
         <style>
             html, body, #map-canvas {
@@ -534,7 +534,7 @@
     </div>
 
     <div class="ribbon l-box-lrg pure-g">
-        <h2 class="content-head content-head-ribbon">What Industries Do <%= @run_session.company_name %> Graduates Work In?</h2>
+        <h2 class="content-head content-head-ribbon">What Industries Do <%= @s.company_name %> Graduates Work In?</h2>
         <!-- <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
  -->            <!-- <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5"> -->
                <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -571,7 +571,7 @@
         <div class="pure-g">
           <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
 <!--             <div class="content"> -->
-          <h1 class="content-head is-center">What Happens After <%= @run_session.company_name %>?</h1>
+          <h1 class="content-head is-center">What Happens After <%= @s.company_name %>?</h1>
           <script type="text/javascript" src="https://www.google.com/jsapi"></script>
               <script type="text/javascript">
                 google.load("visualization", "1", {packages:["bar"]});
@@ -595,10 +595,10 @@
                   chart.draw(data, options);
                 }
               </script>
-              <h3 class="content-head is-center">What <%= @run_session.company_name %> Graduates Currently Do:</h3>
+              <h3 class="content-head is-center">What <%= @s.company_name %> Graduates Currently Do:</h3>
               <div id="bar_chart" style="width:80%;height:450px;margin:auto"></div>
               <div class="content">
-              <h3 class="content-head is-center">Where <%= @run_session.company_name %> Graduates Currently Work:</h3>
+              <h3 class="content-head is-center">Where <%= @s.company_name %> Graduates Currently Work:</h3>
               <div id="contentBox" style="margin:0px auto; width:100%">
                 <div class="container">
                   <div class="table">
