--- a/app/views/display_magic.html.erb
+++ b/app/views/display_magic.html.erb
@@ -384,7 +384,7 @@
   <div class="content-wrapper">
       <div class="pure-g">
         <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-      <h1 class="content-head is-center">Where do <%= @s.company_name %> graduates end up?</h1>
+        <h1 class="content-head is-center">Where do <%= @s.company_name %> alumni end up?</h1>
         <script type="text/javascript"></script>
         <style>
             html, body, #map-canvas {
@@ -394,139 +394,63 @@
             }
         </style>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-            <script>
+        
+        <script>
 
+        // company locations declared below:
+        var citymap = {};
 
-        // job locations declared below:
-            var citymap = {};
-              citymap['flatiron_school'] = {
-                center: new google.maps.LatLng(40.705313, -74.013911),
-                population: 8
-              };
-              citymap['xo_group'] = {
-                center: new google.maps.LatLng(40.710797, -74.009526),
-                population: 2
-              };
-              citymap['alpha_sights'] = {
-                center: new google.maps.LatLng(40.757471, -73.987732),
-                population: 2
-              };
-              citymap['lifebooker'] = {
-                center: new google.maps.LatLng(40.703063, -73.990460),
-                population: 2
-              };
-              citymap['redowl_analytics'] = {
-                center: new google.maps.LatLng(40.708876, -74.006689),
-                population: 2
-              };
-              citymap['paperless_post'] = {
-                center: new google.maps.LatLng(40.708882, -74.011433),
-                population: 2
-              };
-              citymap['fog_creek'] = {
-                center: new google.maps.LatLng(40.706780, -74.012596),
-                population: 1
-              };
-              citymap['time_inc'] = {
-                center: new google.maps.LatLng(40.760438, -73.980764),
-                population: 2
-              };
-              citymap['new_york_times'] = {
-                center: new google.maps.LatLng(40.756205, -73.989914),
-                population: 1
-              };
-              citymap['wsj'] = {
-                center: new google.maps.LatLng(40.756670, -73.983168),
-                population: 1
-              };
-              citymap['maker_bot'] = {
-                center: new google.maps.LatLng(40.725134, -73.994578),
-                population: 1
-              };
-              citymap['constant_contact'] = {
-                center: new google.maps.LatLng(40.763451, -73.986866),
-                population: 1
-              };
-              citymap['buzzfeed'] = {
-                center: new google.maps.LatLng(40.742021, -73.989928),
-                population: 1
-              };
-              citymap['crush_and_lovely'] = {
-                center: new google.maps.LatLng(40.718608, -73.997415),
-                population: 1
-              };
-              citymap['jcrew'] = {
-                center: new google.maps.LatLng(40.730769, -73.991322),
-                population: 1
-              };
-              citymap['venmo'] = {
-                center: new google.maps.LatLng(40.731327, -74.008577),
-                population: 1
-              };
-              citymap['greenhouse_software'] = {
-                center: new google.maps.LatLng(40.714417, -74.007262),
-                population: 1
-              };
-              citymap['contently'] = {
-                center: new google.maps.LatLng(40.725040, -73.996833),
-                population: 1
-              };
-              citymap['yellowhammer'] = {
-                center: new google.maps.LatLng(40.753685, -73.999164),
-                population: 1
-              };
-              citymap['sevenfifty'] = {
-                center: new google.maps.LatLng(40.742811, -74.006826),
-                population: 1
-              };
+        <% @s.sorted_companies.each do |company| %>
+          <% if !company[2].nil? %>
+          citymap["<%= company[0].gsub(" ", "_") %>"] = {
+            center: new google.maps.LatLng(<%= company[2] %>, <%= company[3] %>),
+            population: <%= company[1] %>
+          };
+          <% end %>
+        <% end %>
 
-            var cityCircle;
-
+        var cityCircle;
 
         // Initialize method:
-            function initialize() {
+        function initialize() {
 
-              var mapOptions = {
-                zoom: 13,
-                center: new google.maps.LatLng(40.738233, -73.992577),
-                mapTypeId: google.maps.MapTypeId.TERRAIN,
-                mapTypeControl: false,
-                streetViewControl: false,
-                panControl: false,
-                zoomControlOptions: {
-                  positions: google.maps.ControlPosition.LEFT_BOTTOM
-                }
-              };
+          var mapOptions = {
+            zoom: 11,
+            center: new google.maps.LatLng(<%= @s.sorted_companies.first[2] %>, <%= @s.sorted_companies.first[3] %>),
+            mapTypeId: google.maps.MapTypeId.TERRAIN,
+            mapTypeControl: false,
+            streetViewControl: false,
+            panControl: false,
+            zoomControlOptions: {
+              positions: google.maps.ControlPosition.LEFT_BOTTOM
+            }
+          };
 
+          var map = new google.maps.Map(document.getElementById('location-canvas'), 
+              mapOptions);
 
-              var map = new google.maps.Map(document.getElementById('location-canvas'), 
-                  mapOptions);
+          for (var city in citymap) {
+            var populationOptions = {
+              strokeColor: '#1f8dd6',
+              strokeOpacity: 0.8,
+              strokeWeight: 2,
+              fillColor: '#8FC6EA',
+              fillOpacity: 0.35,
+              map: map,
+              center: citymap[city].center,
+              radius: Math.sqrt(citymap[city].population) * 300
+            };
 
-              for (var city in citymap) {
-                var populationOptions = {
-                  strokeColor: '#1f8dd6',
-                  strokeOpacity: 0.8,
-                  strokeWeight: 2,
-                  fillColor: '#8FC6EA',
-                  fillOpacity: 0.35,
-                  map: map,
-                  center: citymap[city].center,
-                  radius: Math.sqrt(citymap[city].population) * 300
-                };
-
-
-                cityCircle = new google.maps.Circle(populationOptions);
-
+            cityCircle = new google.maps.Circle(populationOptions);
           }
         }
-
 
             google.maps.event.addDomListener(window, 'resize', initialize);
             google.maps.event.addDomListener(window, 'load', initialize)
 
-
-            </script>
-            <div id='location-canvas' style='width:80%;height:450px;margin:auto;'></div>
+        </script>
+        
+        <div id='location-canvas' style='width:80%;height:450px;margin:auto;'></div>
 
         <div class="pure-g">
             <div id="chart_div" style="width: 200px; height: 50px;"></div>
@@ -534,7 +458,7 @@
     </div>
 
     <div class="ribbon l-box-lrg pure-g">
-        <h2 class="content-head content-head-ribbon">What Industries Do <%= @s.company_name %> Graduates Work In?</h2>
+        <h2 class="content-head content-head-ribbon">What Industries Do <%= @s.company_name %> alumni Work In?</h2>
         <!-- <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
  -->            <!-- <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5"> -->
                <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -571,7 +495,7 @@
         <div class="pure-g">
           <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
 <!--             <div class="content"> -->
-          <h1 class="content-head is-center">What Happens After <%= @s.company_name %>?</h1>
+          <h1 class="content-head is-center">What <%= @s.company_name %> Alumni Currently Do:</h1>
           <script type="text/javascript" src="https://www.google.com/jsapi"></script>
               <script type="text/javascript">
                 google.load("visualization", "1", {packages:["bar"]});
@@ -595,67 +519,30 @@
                   chart.draw(data, options);
                 }
               </script>
-              <h3 class="content-head is-center">What <%= @s.company_name %> Graduates Currently Do:</h3>
               <div id="bar_chart" style="width:80%;height:450px;margin:auto"></div>
+              
               <div class="content">
-              <h3 class="content-head is-center">Where <%= @s.company_name %> Graduates Currently Work:</h3>
+              <h1 class="content-head is-center">Where <%= @s.company_name %> Alumni Currently Work:</h1>
               <div id="contentBox" style="margin:0px auto; width:100%">
                 <div class="container">
                   <div class="table">
                   <table style="width:100%">
-                    <tr>
-                      <%@s.sorted_companies[0..2].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[3..5].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[6..8].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[9..11].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[12..14].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[15..17].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[18..20].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[21..23].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
-                    <tr>
-                      <%@s.sorted_companies[24..26].each do |company| %>
-                        <td><%=company[0]%></td>
-                      <%end%>
-                    </tr>
+                    <% count = 0 %>
+                    <% while count < 8 && @s.sorted_companies.size > 0 %>
+                      <% company_group = @s.sorted_companies.shift(3) %>
+                      <tr>
+                        <% company_group.each do |company| %>
+                        <td><%= company[0] %></td>
+                        <% end %>
+                        <% count += 1 %>
+                      </tr>
+                    <% end %>
                   </table>
+                  </div>
                 </div>
               </div>
             </div>
-
-
-              </div>
-            </div>
+          </div>
             <div class="ribbon l-box-lrg pure-g">
                 <h3 class="content-head content-head-ribbon">Want to get involved with The Flatiron School?</h3>
                 <p class="content-head is-center">Become a <a href="http://flatironschool.com/hire.html">hiring partner</a> or <a href="http://go.flatironschool.com/apply">apply</a> to The Flatiron School today!</p>
@@ -675,9 +562,6 @@
       </div>
     </div>
 
-
-
-
     <div class="footer l-box is-center">
         <h5>NextStep was created with   &#9829;   by Sam Van Tran & Vaidehi Joshi, Ruby-006.</h5>
     </div>
@@ -687,3 +571,4 @@
 
 </body>
 </html>
+
